Fixed scrollbar issues

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,5 +1,6 @@
 ﻿body {
     font-family: 'Nunito';
+    overflow:hidden;
 }
 
 h2 {
@@ -20,6 +21,7 @@ h2 {
 
 #mario-chat {
     position:relative;
+    overflow:hidden;
     max-width: 600px;
     margin: 30px auto;
     border: 1px solid #ddd;
@@ -29,8 +31,8 @@ h2 {
 
 #chat-window {
     height: 400px;
-    overflow: auto;
     background: #f9f9f9;
+    overflow-y: scroll;
 }
 
 #output p {
